test_src/compiler_errors/types/binary/LeftShiftFloatError2.b
class LeftShiftFloatError2 {
    void test() {
        println(42 << 14.0);
    }
}
